--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "start": "deno run --allow-net --allow-read --allow-write --unstable-kv server.js",
-    "dev": "deno run --watch --allow-net --allow-read --allow-write --unstable-kv server.js",
+    "start": "deno run --allow-net --allow-read --allow-write --allow-env --unstable-kv server.js",
+    "dev": "deno run --watch --allow-net --allow-read --allow-write --allow-env --unstable-kv server.js",
     "fmt": "deno fmt",
     "lint": "deno lint"
   },
@@ -31,5 +31,8 @@
       "include": [],
       "exclude": []
     }
+  },
+  "imports": {
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.4"
   }
 }
